--- a/src/templates/dashboard2/includes/header.html
+++ b/src/templates/dashboard2/includes/header.html
@@ -30,7 +30,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <!-- Favicon icon -->
-        <link rel="icon" type="image/png" sizes="16x16" href="{% static 'site_2/assets/images/favicon.png' %}">
+        <link rel="shortcut icon" href="{% if site.site_icon %}{{site.site_icon.url}}{% endif %}" type="image/x-icon" />
         <link rel="stylesheet" href="{% static 'site_2/assets/vendor/chartist/css/chartist.min.css' %}">
         <link href="{% static 'site_2/assets/vendor/bootstrap-select/dist/css/bootstrap-select.min.css' %}" rel="stylesheet">
         <link href="{% static 'site_2/assets/vendor/owl-carousel/owl.carousel.css' %}" rel="stylesheet">
@@ -326,9 +326,6 @@
                                     Subscription expired. <a href='{{subscribe_url}}'>Subscribe</a>
                                     today to activate more features
 
-                                {% elif user_payment_status.status == "free_trial_expired" %}
-                                    Free trial expired. <a href='{{subscribe_url}}'>Subscribe</a>
-                                    today to activate more features
 
                                 {% elif user_payment_status.status == "free_trial" %}
                                     Free trial active. Expires on: {{expiry_date}}. <a href='{{subscribe_url}}'>Subscribe</a>
