Fix glitch and allow deletion of images from choice

--- a/src/quizCreation/templates/element_forms/AddChoiceSingleChoiceModal.html
+++ b/src/quizCreation/templates/element_forms/AddChoiceSingleChoiceModal.html
@@ -131,8 +131,11 @@
                                                         <img class="" src="{% if choice.image %}{{choice.image.url}}{% endif %}" alt="">
                                                     </div>
                                                     <a href="#"
-                                                       hx-post="{% url 'delete_logo_from_quiz' user_quiz.id %}"
-                                                       hx-target="#user_image_{{user_quiz.id}}" hx-swap="outerHTML" hx-trigger="click">
+                                                    hx-post="{% url 'delete_image_from_single_choice' user_quiz.id quiz_page.id element.id choice.id %}"
+                                                    hx-target='#modalContent'
+                                                    hx-swap=outerHTML
+                                                    hx-indicator="#spinner_{{choice.id}}"
+                                                       hx-trigger="click">
                                                         <small class="text-muted ">
                                                             Remove?
                                                         </small>
