--- a/src/quizCreation/templates/element_forms/AddChoiceSingleChoiceModal.html
+++ b/src/quizCreation/templates/element_forms/AddChoiceSingleChoiceModal.html
@@ -12,7 +12,7 @@
                 <table class="table">
                     <thead>
                         <tr>
-                            <th>Mark as correct</th>
+                            <th>Mark as correct (use for trivia questions)</th>
                             <th>Choice name</th>
                             <th>Image</th>
                             <th>Delete</th>
