--- a/src/quizData/templates/quizData/response_details.html
+++ b/src/quizData/templates/quizData/response_details.html
@@ -26,13 +26,21 @@
                                     <li>
                                         <div class="timeline-panel p-0 m-0">
 
-                                            <div class="media-body">
-                                                <small class="d-block">{{x.question.get_element_type.element.title}}</small>
+                                            <div class="">
+                                                <div>
+                                                    <small>Question:</small>
+                                                    <strong class="">
+                                                        {{x.question.get_element_type.element.title}}
+                                                    </strong>
+                                                </div>
 
-                                                <h5 >
+                                                <div >
 
                                                     {% if not x.question.get_element_type.type == 'Multiple choice question' %}
+                                                    <small>Answer:</small> 
+                                                    <strong>
                                                         {{x.answer}}
+                                                    </strong> 
 
 
                                                     {% else %}
@@ -42,7 +50,7 @@
 
                                                     {% endif %}
 
-                                                </h5>
+                                                </div>
                                             </div>
 
                                         </div>
