--- a/src/quizCreation/templates/quiz_creation/quizes_list.html
+++ b/src/quizCreation/templates/quiz_creation/quizes_list.html
@@ -36,43 +36,37 @@
                         <div class="col-xl-5 col-xxl-8 col-lg-6 col-sm-8 d-flex align-items-center">
 
                             <div class="info ">
-                                <h4 class=" "><p class="">{{quiz.name}}</p></h4>
-
-
-
                                 <a    href="{% if request.is_secure %}https://{% else %}http://{% endif %}{{request.get_host}}{% url 'take_quiz' quiz.id %}" target="_blank"
                                    type="button" class="mx-1"  >Open quiz in new tab</a> |
 
 
-                                <div class="btn-group" role="group">
                                     <a           id="copy-button{{quiz.id}}"          data-clipboard-target="#linkToQuiz{{quiz.id}}"
                                        type="button" class=" dropdown-toggle mx-1" data-toggle="dropdown">Copy link to quiz</a> |
                                     <div class="dropdown-menu">
                                         <span class="dropdown-item" href="javascript:void()">Link successfully copied!</span>
                                     </div>
-                                </div>
 
-                                <input type="hidden" id="linkToQuiz{{quiz.id}}" value="{% if request.is_secure %}https://{% else %}http://{% endif %}{{request.get_host}}{% url 'take_quiz' quiz.id %}">
+
+                                <input style="display:none;" type="hidden" id="linkToQuiz{{quiz.id}}" value="{% if request.is_secure %}https://{% else %}http://{% endif %}{{request.get_host}}{% url 'take_quiz' quiz.id %}">
 
                                 <script>                                new ClipboardJS('#copy-button{{quiz.id}}');</script>
 
 
 
-
-
-
                                 <a type="button"
                                    hx-confirm="Are you sure you want to delete this quiz"
-                                   hx-delete  ="{% url 'htmx_quiz_delete' quiz.id %}" class="mx-1"
+                                   hx-delete  ="{% url 'htmx_quiz_delete' quiz.id %}" class="mx-1 text-danger"
                                    hx-target="#quizesList"
-
 
                                 >
                                     Delete
-
-
-
                                 </a>
+                                <h4 class="mt-3 ">
+                                    <small>Quiz name:</small>
+                                    
+                                    <p class="">{{quiz.name}}</p></h4>
+
+
 
                             </div>
 
