--- a/src/quizRender/templates/take_quiz/includes/footer.html
+++ b/src/quizRender/templates/take_quiz/includes/footer.html
@@ -27,7 +27,7 @@
         <p>Copyright © {{site.site_name}} <script>document.write(new Date().getFullYear())</script>.
         </p>
         {% if site.site_logo %}
-            <a class="text-center justify-content-center text-center d-flex mx-auto" href="{% url 'dashboard_home' %}" class="logo " style="max-width:20rem;max-height:5rem;">
+            <a class="text-center justify-content-center text-center d-flex mx-auto" href="{% url 'home' %}" class="logo " style="max-width:20rem;max-height:5rem;">
                 <span class="">
                     <img src="{{site.site_logo.url}}" alt="" style="max-width:80%;max-height:5rem;">
                 </span>
