--- a/src/quizCreation/templates/quiz_page_elements.html
+++ b/src/quizCreation/templates/quiz_page_elements.html
@@ -139,7 +139,7 @@
                     {% endautoescape %}
                     <div>
                         <br><br>
-                        {% if element.type == 'Text input element' or  element.type == 'Char input element' or  element.type == 'Email input element' or element.type == 'Number input element' or element.type == 'Multiple choice question' or element.type == "Single choice question" %}
+                        {% if element.type == 'Text input element' or  element.type == 'Char input element' or  element.type == 'Email input element' or element.type == 'Number input element' or element.type == 'Multiple choice question' or element.type == "Single choice question" or element.type == "Agree disagree element" %}
                             Question title:
                             <ul class=" list-group-horizontal-sm">
                                 <li class="my-4">
